feat: update footer text in index.html

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </div>
 
   <footer class="mt-5 p-3 text-center bg-light">
-    GitHub Finder &copy;
+    &copy; GitHub Finder
   </footer>
   
   <script src="js/env.js"></script>
